[package]
name = "semver"
version = "1.0.25"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["data-structures", "no-std"]
description = "Parser and evaluator for Cargo's flavor of Semantic Versioning"
documentation = "https://docs.rs/semver"
edition = "2021"
keywords = ["cargo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/semver"
 

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0.218", optional = true, default-features = false }

[lib]
doc-scrape-examples = false

 

[package.metadata.playground]
features = ["serde"]
