[package]
name = "installer"
version = "0.2.0"
authors = ["金正伟 <76711619@qq.com>"]
edition = "2021"

[dependencies]
structopt = "0.3.3"
reqwest = "0.11.10"
zip = "0.6.2"
serde = "1.0.101"
serde_derive ="1.0.101"
serde_json ="1.0.41"
toml = "0.5.3"
version-compare = "0.1.0"
os_info = "3.3.0"
ipconfig = "0.3.0"
mac_address = "1.0.2"
get_if_addrs = "0.5.3"
platforms = "3.0.0"
prettytable-rs = "0.8.0"
indicatif = "0.16.2"
url = "2.1.0"

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "2.0.4"
predicates = "2.1.1"
mockito = "0.31.0"
