[package]
name = "robin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.1"
hex-literal = "1.0.0"
digest = "0.10.3"
clap = { version = "4.5.30", features = ["derive","cargo"] }
colored = "3.0.0"
