[package]
name = "eg-tutor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version="0.31.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
]}
egui_extras = { version = "*", features = ["default", "image"] }

env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }