[package]
name = "julia"
version = "0.1.0"
edition = "2024"

[dependencies]
clap={version = "*",features = ["derive","cargo"]}
reqwest={version = "*",features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
anyhow={version = "*"}
walkdir={version = "*"}
webp={version = "*"}
image={version = "*"}
rayon={version = "*"}
colored="*"
tempfile="*"
lazy_static="*"
log = "0.4.26"
env_logger = "0.11.6"
