[package]
name = "julia"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive", "cargo"] }
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }


serde_json = "1"
anyhow = { version = "*" }
walkdir = { version = "*" }
webp = { version = "*" }
image = { version = "*" }
rayon = { version = "*" }
colored = "*"
tempfile = "*"
lazy_static = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
toml="*"
sysinfo = "0.33.1"
inquire = "0.7.5"
cli-table = "0.4.9"