[package]
name = "mini"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.4", features = ["derive", "cargo"] }
bincode="1"
# serde 用在将rust中的值进行各种格式的序列化和反序列化
serde="1"
serde_cbor="0.11.2"
serde_derive="1"
serde_json="1"