[package]
name = "mini_web"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tokio = { version = "1.37.0", features = ["full"] }
mini-redis = "0.4"
clap = { version = "^4.5.4", features = ["derive", "cargo"] }
